--- a/style.css
+++ b/style.css
@@ -10,16 +10,16 @@
 
 :root {
     --background-color: #1E1E1E;
-    --background-color-trans: #1E1E1E; 
+    --background-color-trans: transparent; 
     --text-color: #FFF;
     --lowkey-accent-color: #FFF;
     --hella-lowkey-accent-color: #FFF;
     --super-hella-lac: #FFF;
-    --highlight-color: #00FF85;
+    --highlight-color: #DB00FF;
     --highlightER-color: #dab46e13;
-    --title-fontsize: calc(0.7rem + 2.1vw);
+    --title-fontsize: calc(0.7rem + 3.0vw);
     --nav-fontsize: calc(0.7rem + 1.3vw);
-    --p-fontsize: calc(0.4rem + 1.5vw);
+    --p-fontsize: calc(0.4rem + 0.5vw);
     --cycle-fontsize: calc(0.5rem + 1.5vw);
 }
 
@@ -28,16 +28,21 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
-    
     color: var(--text-color);
     background-color: var(--background-color);
-    font-family: 'SofiaSans'; 
-    
+    font-family: 'RobotoMono'; 
+    overflow: hidden;
 }
 a {
     text-decoration: none;
     color: var(--hella-lowkey-accent-color);
 }
+.canvas-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
 
 #background {
     position: fixed;
@@ -50,7 +55,10 @@ a {
     transition: opacity 1s ease-in;
     background-size: cover;
     background-image: rgba(0, 0, 0, 0);
+    overflow: auto;
 }
+
+
 
 /* Banner */
 .banner {
@@ -58,8 +66,8 @@ a {
     margin: 0;
     top: 0;
     width: 100%;
-    background-color: #00FF85;
     color: black;
+    background-image: linear-gradient(to right, #000AFF, #DB00FF);
     width: 100%;
     text-align: center;
     padding: 1vmin;
@@ -72,13 +80,18 @@ a {
     font-variation-settings: "wght" 500;
 }
 .nav {
+    line-height: calc(2rem + var(--nav-fontsize));
     font-size: var(--nav-fontsize);
     font-variation-settings: "wght" 400;
-    display: flex;
     flex-direction: row;
     justify-content: space-between;
     text-transform: uppercase;
     color: var(--text-color);
+    margin-top: 5vh;
+    text-indent: 50px;
+    
+
+    
 }
 
 @media only screen and (max-width: 600px) {
@@ -92,6 +105,7 @@ a {
 
 }
 
+/*
 .title {
     text-indent: 50px;
     margin-top: 2vh;
@@ -101,21 +115,72 @@ a {
     white-space: nowrap;
     display: inline-block;
     color: var(--highlight-color);
-    background-color: var(--background-color);
-}
-
-
-.picture{
-    height: auto;
-    width: 30%;
-    float: right;
+    background-color: var(--background-color-trans);
+    font-family: 'RobotoMono';
+    letter-spacing: -5px;
+    line-height: 48px;
     
 }
-.picture img {
-    width: 60%; 
-    height: auto; 
-    border-radius: 25px;
+*/
+.beginning {
+    text-indent: 50px;
+    margin-top: 2vh;
+    font-size: var(--title-fontsize);
+    line-height: calc(2rem + var(--title-fontsize));
+    font-variation-settings: "wght" 600;
+    white-space: nowrap;
+    display: inline-block;
+    color: var(--highlight-color);
+    background-color: var(--background-color-trans);
+    font-family: 'RobotoMono';
+    letter-spacing: -5px;
+    line-height: 48px;
 }
+.end {
+    text-indent: 50px;
+    margin-top: 2vh;
+    font-size: var(--title-fontsize);
+    line-height: calc(2rem + var(--title-fontsize));
+    font-variation-settings: "wght" 600;
+    white-space: nowrap;
+    display: inline-block;
+    color: var(--highlight-color);
+    background-color: var(--background-color-trans);
+    font-family: 'RobotoMono';
+    letter-spacing: -5px;
+    line-height: 48px;
+}
+.circle-container {
+    height: 750px; /* Adjust the height as desired */
+    width: 750px; /* Adjust the width as desired */
+    border-radius: 50%; /* Adding a circular border radius */
+    background-image: radial-gradient(circle, #000AFF, #DB00FF); /* Adjust the colors as desired */
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    float: right;
+    margin: 10px 150px 75px 100px;
+}
+
+.picture {
+    height: 80%; /* Adjust the height of the image container */
+    width: 80%; /* Adjust the width of the image container */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-35%, -50%); /* Center the image in the circle */
+    border-radius: 50%;
+}
+
+.picture img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 20%;
+}
+
 
 /* Intro Paragraph */
 .intro {
@@ -124,25 +189,40 @@ a {
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
     padding: 0 2vw 0 0;
+    font-family: 'RobotoMono';
+    margin-right: 40%;
+    
 }
 
 
 .intro h2 {
     margin: 1vh 0;
     font-size: var(--p-fontsize);
+    font-family: 'RobotoMono';
+    background-color: var(--background-color-trans);;
+
+
 }
 
 .intro h3 {
     line-height: 2.8;
     margin: 1vh 0;
     font-size: var(--p-fontsize);
+    font-family: 'RobotoMono';
+    background-color: var(--background-color-trans);
+
+
 
 }
 
 .intro em {
     font-style: normal;
-    font-variation-settings: "wght" 500;
-    font-size: var(--cycle-fontsize);
+    font-size: var(--p-fontsize);
+    font-family: 'RobotoMono';
+    background-color: var(--background-color-trans);
+    
+
+
 
 
 }
@@ -154,6 +234,8 @@ a {
     }
 }
 
+
+
 div.footer {
     position: absolute;
     bottom: 0;
@@ -164,6 +246,8 @@ footer {
     width: 100vw;
     text-align: center;
     font-size: calc(0.8 * var(--p-fontsize));
+    background-color: var(--background-color-trans);
+
 }
 
 @media only screen and (max-height: 400px) {
@@ -180,6 +264,15 @@ footer {
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
+    font-family: 'RobotoMono';
+    margin-left: 50px;
+    white-space: nowrap;
+    display: inline-block;
+    color: var(--highlight-color);
+    background-color: var(--background-color-trans);
+    line-height: 48px;
+
+
 
 }
 
