--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
     font-style: normal;
     font-display: swap;
 }
+@font-face {
+    font-family: 'Outfit';
+    src: url('../fonts/Outfit-VariableFont_wght.ttf');
+    font-variation-settings: "wght" 375;
+    font-stretch: 75% 125%;
+    font-style: normal;
+    font-display: swap;
+}
 
 :root {
     --background-color: #1E1E1E;
@@ -16,10 +24,11 @@
     --hella-lowkey-accent-color: #FFF;
     --super-hella-lac: #FFF;
     --highlight-color: #DB00FF;
+    --alt-color: #000AFF;
     --highlightER-color: #dab46e13;
-    --title-fontsize: calc(0.7rem + 3.0vw);
+    --title-fontsize: calc(1.0rem + 1.0vw);
     --nav-fontsize: calc(0.7rem + 1.3vw);
-    --p-fontsize: calc(0.4rem + 0.5vw);
+    --p-fontsize: calc(0.8rem + 0.5vw);
     --cycle-fontsize: calc(0.5rem + 1.5vw);
 }
 
@@ -30,7 +39,7 @@ body {
     margin: 0;
     color: var(--text-color);
     background-color: var(--background-color);
-    font-family: 'RobotoMono'; 
+    font-family: 'Outfit'; 
     overflow: hidden;
 }
 a {
@@ -73,12 +82,33 @@ a {
     padding: 1vmin;
     font-size: 2.5vmin;
     font-variation-settings: "wght" 300;
-    font-family: 'RobotoMono';
+    font-family: 'Outfit';
+    
 }
 .banner em {
     font-style: normal;
     font-variation-settings: "wght" 500;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .safe {
+        margin: 17.5vh 0 0 17.5vw;
+        width: 75vw;
+    }
+
+    .scroll {
+        width: 75vw;
+    
+        margin: 0 7.5vw 0 17.5vw;
+    
+        transition: margin 0.05s ease-out;
+}
+}
+
+
+
+
 .nav {
     line-height: calc(2rem + var(--nav-fontsize));
     font-size: var(--nav-fontsize);
@@ -89,10 +119,9 @@ a {
     color: var(--text-color);
     margin-top: 5vh;
     text-indent: 50px;
-    
-
-    
 }
+
+
 
 @media only screen and (max-width: 600px) {
     .nav {
@@ -105,7 +134,7 @@ a {
 
 }
 
-/*
+
 .title {
     text-indent: 50px;
     margin-top: 2vh;
@@ -116,14 +145,41 @@ a {
     display: inline-block;
     color: var(--highlight-color);
     background-color: var(--background-color-trans);
+    font-family: 'Outfit';
+    letter-spacing: 5px;
+    line-height: 48px;
+    background-image: linear-gradient(to right, #000AFF, #DB00FF);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+    font-weight: 400;
+    
+}
+
+/*
+.beginning {
+    
+    margin-top: 2vh;
+    font-size: var(--title-fontsize);
+    line-height: calc(2rem + var(--title-fontsize));
+    font-variation-settings: "wght" 600;
+    white-space: nowrap;
+    display: inline-block;
+    color: var(--highlight-color);
+    background-color: var(--background-color-trans);
     font-family: 'RobotoMono';
     letter-spacing: -5px;
     line-height: 48px;
     
+    margin-left: 50px;
 }
 */
+/*
 .beginning {
-    text-indent: 50px;
+   
     margin-top: 2vh;
     font-size: var(--title-fontsize);
     line-height: calc(2rem + var(--title-fontsize));
@@ -134,10 +190,11 @@ a {
     background-color: var(--background-color-trans);
     font-family: 'RobotoMono';
     letter-spacing: -5px;
-    line-height: 48px;
+    line-height: 60px;
+    margin-left: 50px;
 }
 .end {
-    text-indent: 50px;
+    
     margin-top: 2vh;
     font-size: var(--title-fontsize);
     line-height: calc(2rem + var(--title-fontsize));
@@ -146,13 +203,24 @@ a {
     display: inline-block;
     color: var(--highlight-color);
     background-color: var(--background-color-trans);
-    font-family: 'RobotoMono';
-    letter-spacing: -5px;
-    line-height: 48px;
+    font-family: 'OdibeeSans';
+    letter-spacing: 5px;
+    line-height: 100px;
+    font-weight: 400;
+    margin-left: 50px;
+    background-image: linear-gradient(to right, #000AFF, #DB00FF);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
 }
+*/
+
 .circle-container {
-    height: 750px; /* Adjust the height as desired */
-    width: 750px; /* Adjust the width as desired */
+    height: 650px; /* Adjust the height as desired */
+    width: 650px; /* Adjust the width as desired */
     border-radius: 50%; /* Adding a circular border radius */
     background-image: radial-gradient(circle, #000AFF, #DB00FF); /* Adjust the colors as desired */
     position: relative;
@@ -161,24 +229,32 @@ a {
     align-items: center;
     overflow: hidden;
     float: right;
-    margin: 10px 150px 75px 100px;
+    margin: 10px 50px 75px 50px;
+    
+
 }
 
 .picture {
-    height: 80%; /* Adjust the height of the image container */
-    width: 80%; /* Adjust the width of the image container */
+    height: 80%; 
+    width: 80%; 
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-35%, -50%); /* Center the image in the circle */
-    border-radius: 50%;
+    transform: translate(-33.5%, -50%); 
+    
+    
+    
+
+   
 }
 
 .picture img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
-    border-radius: 20%;
+    border-radius: 15%;
+    
+
 }
 
 
@@ -189,8 +265,9 @@ a {
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
     padding: 0 2vw 0 0;
-    font-family: 'RobotoMono';
-    margin-right: 40%;
+    font-family: 'Outfit';
+    
+    margin-right: 55%;
     
 }
 
@@ -198,8 +275,9 @@ a {
 .intro h2 {
     margin: 1vh 0;
     font-size: var(--p-fontsize);
-    font-family: 'RobotoMono';
+    font-family: 'Outfit';
     background-color: var(--background-color-trans);;
+    
 
 
 }
@@ -208,9 +286,9 @@ a {
     line-height: 2.8;
     margin: 1vh 0;
     font-size: var(--p-fontsize);
-    font-family: 'RobotoMono';
+    font-family: 'Outfit';
     background-color: var(--background-color-trans);
-
+    
 
 
 }
@@ -218,14 +296,15 @@ a {
 .intro em {
     font-style: normal;
     font-size: var(--p-fontsize);
-    font-family: 'RobotoMono';
+    font-family: 'Outfit';
     background-color: var(--background-color-trans);
     
-
-
-
-
 }
+
+
+
+
+
 
 @media only screen and (max-width: 600px) {
     .intro {
@@ -234,7 +313,55 @@ a {
     }
 }
 
+ /* Intro Cycle */
 
+ span#cycle {
+    color: var(--alt-color);
+    transition: transform 0.15s ease-in-out;
+    display: inline-block;
+    border-radius: 0.3vmax;
+    background-color: var(--highlightER-color);
+
+    font-family: 'Outfit';
+    font-size: var(--cycle-fontsize);
+    font-variation-settings: "wght" 600;
+    
+}
+
+#projects-header {
+font-size: calc( var(--cycle-fontsize) * 1.25);
+margin-bottom: 0;
+
+
+}
+
+#projects-list {
+margin-left: 0;
+padding-left: 0;
+
+
+}
+
+#projects-list li, #projects-list a {
+font-size: calc(0.85 * var(--p-fontsize));
+
+
+
+}
+
+@media only screen and (max-width: 600px) {
+#projects-header {
+    font-size: calc( var(--cycle-fontsize) * 1.45);
+    
+
+}
+
+#projects-list li, #projects-list a {
+    font-size: calc(1.25 * var(--p-fontsize));
+    
+    
+}
+}
 
 div.footer {
     position: absolute;
@@ -247,6 +374,9 @@ footer {
     text-align: center;
     font-size: calc(0.8 * var(--p-fontsize));
     background-color: var(--background-color-trans);
+    
+    margin-right: 50%;
+    margin: 0;
 
 }
 
@@ -260,20 +390,40 @@ footer {
     }
 }
 
+@media only screen and (max-width: 600px) {
+    .scroll {
+        width: 75vw;
+    
+        margin: 0 7.5vw 0 17.5vw;
+    
+        transition: margin 0.05s ease-out;
+}
+}
+
 .scroll {
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
-    font-family: 'RobotoMono';
     margin-left: 50px;
     white-space: nowrap;
     display: inline-block;
-    color: var(--highlight-color);
+    
     background-color: var(--background-color-trans);
     line-height: 48px;
+    font-family: 'Outfit';
 
 
 
+}
+.repo{
+    background-image: linear-gradient(to right, #000AFF, #DB00FF);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+    font-weight: 400;
 }
 
 /* Footer */
@@ -302,16 +452,14 @@ footer {
 footer p {
     margin: 0;
 }
-
     /* Footer Icons */
-
     .icons {
         justify-content: center;
         gap: 2vw;
     }
 
     .icons img {
-        width: 3vw;
+        width: 2vw;
         background-color: var(--text-color);
         transition: background-color-trans 0.1s;
         border-radius: 1vmax;
@@ -327,3 +475,11 @@ footer p {
             width: 7vw;
         }
     }
+/* Simple classes */
+.hidden,
+.hidden * {
+    display: none !important;
+}
+.underlined {
+    text-decoration: underline;
+}
