--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     --highlight-color: #DB00FF;
     --alt-color: #000AFF;
     --highlightER-color: #dab46e13;
-    --title-fontsize: calc(1.0rem + 1.0vw);
+    --title-fontsize: calc(1.0rem + 0.5vw);
     --nav-fontsize: calc(0.7rem + 1.3vw);
     --p-fontsize: calc(0.8rem + 0.5vw);
     --cycle-fontsize: calc(0.5rem + 1.5vw);
@@ -40,7 +40,7 @@ body {
     color: var(--text-color);
     background-color: var(--background-color);
     font-family: 'Outfit'; 
-    overflow: hidden;
+    overflow-x:hidden;
 }
 a {
     text-decoration: none;
@@ -71,7 +71,7 @@ a {
 
 /* Banner */
 .banner {
-    position: fixed;
+    position: absolute;
     margin: 0;
     top: 0;
     width: 100%;
@@ -130,14 +130,16 @@ a {
 }
 
 .header {
-    margin: 0;
+    
+    margin-top: 15.5%;
 
 }
 
 
+
 .title {
-    text-indent: 50px;
-    margin-top: 2vh;
+    text-indent: 60px;
+    margin-top: 8.5vh;
     font-size: var(--title-fontsize);
     line-height: calc(2rem + var(--title-fontsize));
     font-variation-settings: "wght" 600;
@@ -146,7 +148,7 @@ a {
     color: var(--highlight-color);
     background-color: var(--background-color-trans);
     font-family: 'Outfit';
-    letter-spacing: 5px;
+    letter-spacing: 3px;
     line-height: 48px;
     background-image: linear-gradient(to right, #000AFF, #DB00FF);
     background-size: 100%;
@@ -156,6 +158,9 @@ a {
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     font-weight: 400;
+    
+    margin-left: 100px;
+    
     
 }
 
@@ -217,12 +222,12 @@ a {
     -moz-text-fill-color: transparent;
 }
 */
-
+/*
 .circle-container {
-    height: 650px; /* Adjust the height as desired */
-    width: 650px; /* Adjust the width as desired */
-    border-radius: 50%; /* Adding a circular border radius */
-    background-image: radial-gradient(circle, #000AFF, #DB00FF); /* Adjust the colors as desired */
+    height: 650px; 
+    width: 650px; 
+    border-radius: 50%; 
+    background-image: radial-gradient(circle, #000AFF, #DB00FF); 
     position: relative;
     display: flex;
     justify-content: center;
@@ -233,12 +238,12 @@ a {
     
 
 }
-
+*/
 .picture {
-    height: 80%; 
-    width: 80%; 
+    height: 50%; 
+    width: 50%; 
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-33.5%, -50%); 
     
@@ -249,45 +254,59 @@ a {
 }
 
 .picture img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 150%;
+    max-height: 150%;
     object-fit: cover;
     border-radius: 15%;
-    
+    float: right;
+}
 
+.vl{
+    border-left: 2px solid white;
+    height: 400px;
+    position: absolute;
+    left: 50%;
 }
 
 
 /* Intro Paragraph */
 .intro {
-    margin-left: 50px;
+    margin-top: -2.5%;
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
     padding: 0 2vw 0 0;
     font-family: 'Outfit';
+    margin-right: 50%;
+    text-align: right;
+    float:left;
+    position: absolute;
+    margin-left: 20%;
     
-    margin-right: 55%;
+    
     
 }
 
 
 .intro h2 {
-    margin: 1vh 0;
+    
     font-size: var(--p-fontsize);
-    font-family: 'Outfit';
-    background-color: var(--background-color-trans);;
+    background-color: var(--background-color-trans);
+    text-indent: 50px;
+    
+
     
 
 
 }
 
-.intro h3 {
+.scroll h3 {
     line-height: 2.8;
-    margin: 1vh 0;
+    /*margin: 1vh 0;*/
     font-size: var(--p-fontsize);
     font-family: 'Outfit';
     background-color: var(--background-color-trans);
+    
     
 
 
@@ -298,6 +317,7 @@ a {
     font-size: var(--p-fontsize);
     font-family: 'Outfit';
     background-color: var(--background-color-trans);
+    
     
 }
 
@@ -411,6 +431,7 @@ footer {
     background-color: var(--background-color-trans);
     line-height: 48px;
     font-family: 'Outfit';
+    margin-top: 75%;
 
 
 
@@ -428,7 +449,7 @@ footer {
 
 /* Footer */
 div.footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     margin-bottom: 2vh;
 }
@@ -437,6 +458,7 @@ footer {
     width: 100vw;
     text-align: center;
     font-size: calcv(0.3 * var(p-fontsize));
+    
 }
 
 @media only screen and (max-height: 400px) {
