--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     --highlightER-color: #dab46e13;
     --title-fontsize: calc(1.0rem + 0.5vw);
     --nav-fontsize: calc(0.7rem + 1.3vw);
-    --p-fontsize: calc(0.8rem + 0.5vw);
+    --p-fontsize: calc(0.4rem + 1.0vw);
     --cycle-fontsize: calc(0.5rem + 1.5vw);
 }
 
@@ -41,6 +41,8 @@ body {
     background-color: var(--background-color);
     font-family: 'Outfit'; 
     overflow-x:hidden;
+    margin-left:auto;
+    margin-right:auto;
 }
 a {
     text-decoration: none;
@@ -91,24 +93,6 @@ a {
 }
 
 
-@media only screen and (max-width: 600px) {
-    .safe {
-        margin: 17.5vh 0 0 17.5vw;
-        width: 75vw;
-    }
-
-    .scroll {
-        width: 75vw;
-    
-        margin: 0 7.5vw 0 17.5vw;
-    
-        transition: margin 0.05s ease-out;
-}
-}
-
-
-
-
 .nav {
     line-height: calc(2rem + var(--nav-fontsize));
     font-size: var(--nav-fontsize);
@@ -121,7 +105,19 @@ a {
     text-indent: 50px;
 }
 
+a.underlined, span.underlined {
+    transition: color 0.1s ease-in-out;
+}
 
+a.underlined:hover, a:hover span.underlined {
+    color: var(--text-color);
+}
+
+@media only screen and (max-width: 600px) {
+    .nav {
+        font-size: calc(1.5 * var(--nav-fontsize));
+    }
+}
 
 @media only screen and (max-width: 600px) {
     .nav {
@@ -138,8 +134,7 @@ a {
 
 
 .title {
-    text-indent: 60px;
-    margin-top: 8.5vh;
+    margin-top: 2.5vh;
     font-size: var(--title-fontsize);
     line-height: calc(2rem + var(--title-fontsize));
     font-variation-settings: "wght" 600;
@@ -149,7 +144,7 @@ a {
     background-color: var(--background-color-trans);
     font-family: 'Outfit';
     letter-spacing: 3px;
-    line-height: 48px;
+    line-height: 80px;
     background-image: linear-gradient(to right, #000AFF, #DB00FF);
     background-size: 100%;
     background-repeat: repeat;
@@ -158,171 +153,119 @@ a {
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     font-weight: 400;
+    margin-left: 300px;
+    position:absolute;
+    animation: fadeIn 3s;
+    margin-left: 14.9%;
     
-    margin-left: 100px;
-    
-    
+}
+.title h1 {
+    margin: 0;
 }
 
-/*
-.beginning {
+.title h1 span:first-child {
     
-    margin-top: 2vh;
-    font-size: var(--title-fontsize);
-    line-height: calc(2rem + var(--title-fontsize));
-    font-variation-settings: "wght" 600;
-    white-space: nowrap;
-    display: inline-block;
-    color: var(--highlight-color);
-    background-color: var(--background-color-trans);
-    font-family: 'RobotoMono';
-    letter-spacing: -5px;
-    line-height: 48px;
-    
-    margin-left: 50px;
+    font-variation-settings: "wght" 400;
 }
-*/
-/*
-.beginning {
-   
-    margin-top: 2vh;
-    font-size: var(--title-fontsize);
-    line-height: calc(2rem + var(--title-fontsize));
-    font-variation-settings: "wght" 600;
-    white-space: nowrap;
-    display: inline-block;
-    color: var(--highlight-color);
-    background-color: var(--background-color-trans);
-    font-family: 'RobotoMono';
-    letter-spacing: -5px;
-    line-height: 60px;
-    margin-left: 50px;
-}
-.end {
-    
-    margin-top: 2vh;
-    font-size: var(--title-fontsize);
-    line-height: calc(2rem + var(--title-fontsize));
-    font-variation-settings: "wght" 600;
-    white-space: nowrap;
-    display: inline-block;
-    color: var(--highlight-color);
-    background-color: var(--background-color-trans);
-    font-family: 'OdibeeSans';
-    letter-spacing: 5px;
-    line-height: 100px;
-    font-weight: 400;
-    margin-left: 50px;
-    background-image: linear-gradient(to right, #000AFF, #DB00FF);
-    background-size: 100%;
-    background-repeat: repeat;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-background-clip: text;
-    -moz-text-fill-color: transparent;
-}
-*/
-/*
-.circle-container {
-    height: 650px; 
-    width: 650px; 
-    border-radius: 50%; 
-    background-image: radial-gradient(circle, #000AFF, #DB00FF); 
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    float: right;
-    margin: 10px 50px 75px 50px;
-    
 
+
+@media only screen and (max-width: 600px) {
+    .title {
+        font-size: calc(2.5 * var(--title-fontsize));
+
+        line-height: calc(1rem + 1.5 * var(--title-fontsize));
+    }
+
+    .title h1 {
+        display: inline-flex;
+        flex-direction: column;
+    }
+
+    .title h1 span:first-child {
+        font-variation-settings: "wght" 350;
+    }
 }
-*/
+
+
 .picture {
-    height: 50%; 
-    width: 50%; 
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-33.5%, -50%); 
-    
-    
-    
+    height: auto; 
+    width: 35%; 
+    position: relative;
+    top: -100px;
+    left: 55%;
+    transform: translate(-30%, -30%);   
+    animation: fadeIn 3s;
 
-   
+    
 }
 
 .picture img {
-    max-width: 150%;
-    max-height: 150%;
-    object-fit: cover;
-    border-radius: 15%;
+    max-width: 50%;
+    max-height: 50%;
     float: right;
 }
 
-.vl{
-    border-left: 2px solid white;
-    height: 400px;
+.picture::before,
+.picture::after {
+    content: '';
     position: absolute;
-    left: 50%;
+    width: 80px;
+    height: 80px;
+    z-index: 1;
 }
 
 
-/* Intro Paragraph */
+.picture::before {
+    top: -40px;
+    left: 200px;
+    border-top: 10px solid #000AFF;
+    border-left: 10px solid #DB00FF;
+
+}
+
+
+.picture::after {
+    bottom: -550px;
+    right: -130px;
+    border-bottom: 10px solid #000AFF;
+    border-right: 10px solid #DB00FF;
+}
+
+
+
+
+
+
 .intro {
-    margin-top: -2.5%;
+    margin-top: 5%;
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
     padding: 0 2vw 0 0;
     font-family: 'Outfit';
-    margin-right: 50%;
-    text-align: right;
-    float:left;
+    margin-left: 15%;
+    margin-right: 48%;
     position: absolute;
-    margin-left: 20%;
+    animation: fadeIn 3s;
     
-    
-    
-}
+ }
 
 
 .intro h2 {
-    
-    font-size: var(--p-fontsize);
+    margin: 1vh 0;
     background-color: var(--background-color-trans);
-    text-indent: 50px;
-    
 
-    
-
-
+       
 }
 
-.scroll h3 {
-    line-height: 2.8;
-    /*margin: 1vh 0;*/
-    font-size: var(--p-fontsize);
-    font-family: 'Outfit';
-    background-color: var(--background-color-trans);
-    
-    
-
-
-}
 
 .intro em {
     font-style: normal;
     font-size: var(--p-fontsize);
     font-family: 'Outfit';
     background-color: var(--background-color-trans);
-    
-    
+    font-variation-settings: "wght" 500;
 }
-
-
-
 
 
 
@@ -340,8 +283,13 @@ a {
     transition: transform 0.15s ease-in-out;
     display: inline-block;
     border-radius: 0.3vmax;
-    background-color: var(--highlightER-color);
-
+    background-image: linear-gradient(to right, #000AFF, #DB00FF);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
     font-family: 'Outfit';
     font-size: var(--cycle-fontsize);
     font-variation-settings: "wght" 600;
@@ -378,64 +326,88 @@ font-size: calc(0.85 * var(--p-fontsize));
 
 #projects-list li, #projects-list a {
     font-size: calc(1.25 * var(--p-fontsize));
+    animation: fadeIn 0.5s ease-in-out;
     
     
 }
 }
 
-div.footer {
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 2vh;
-}
 
-footer {
-    width: 100vw;
-    text-align: center;
-    font-size: calc(0.8 * var(--p-fontsize));
-    background-color: var(--background-color-trans);
-    
-    margin-right: 50%;
-    margin: 0;
 
-}
-
-@media only screen and (max-height: 400px) {
-    .footer {
-        display: none;
-    }
-
-    .scroll {
-        display: none;
-    }
-}
 
 @media only screen and (max-width: 600px) {
-    .scroll {
+    .repolist, .scroll {
         width: 75vw;
     
         margin: 0 7.5vw 0 17.5vw;
     
         transition: margin 0.05s ease-out;
+    }
 }
+.vl{
+    border-left: 1px solid white;
+    height: 400px;
+    position: absolute;
+    left: 50%;
+    top: 111%;
 }
-
-.scroll {
+.scroll{
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
-    margin-left: 50px;
     white-space: nowrap;
     display: inline-block;
-    
     background-color: var(--background-color-trans);
     line-height: 48px;
     font-family: 'Outfit';
-    margin-top: 75%;
+    margin-top: 50%;
+    
+    flex-basis: 60%;
+    /*margin-left: 50px;*/
+    margin-left: 15.7%;
+    margin-right: 50%;
+    position: absolute;
+    top: 47%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-bottom: 500px;
+    margin-bottom: 50%;
+    animation: fadeIn 3s;
+    
 
-
-
+    
+    
+    
 }
+
+.repolist{
+    font-size: var(--p-fontsize);
+    font-variation-settings: "wght" 350;
+    background-color: var(--background-color-trans);
+    white-space: nowrap;
+    display: inline-block;
+    background-color: var(--background-color-trans);
+    line-height: 48px;
+    font-family: 'Outfit';
+    margin-top: 60%;
+    flex-basis: 60%;
+    margin-left: 15.7%;
+    margin-right: 50%;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-bottom: 200px;
+    text-align: left;
+    padding-right: 100px;
+    animation: fadeIn 3s;
+    
+    
+
+        
+}
+
+
 .repo{
     background-image: linear-gradient(to right, #000AFF, #DB00FF);
     background-size: 100%;
@@ -445,9 +417,9 @@ footer {
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     font-weight: 400;
-}
+    
 
-/* Footer */
+}
 div.footer {
     position: fixed;
     bottom: 0;
@@ -457,8 +429,12 @@ div.footer {
 footer {
     width: 100vw;
     text-align: center;
-    font-size: calcv(0.3 * var(p-fontsize));
-    
+    font-size: calc(0.8 * var(--p-fontsize));
+    background-color: var(--background-color-trans);
+    animation: fadeIn 3s;
+    margin-right: 50%;
+    margin: 0;
+
 }
 
 @media only screen and (max-height: 400px) {
@@ -485,7 +461,9 @@ footer p {
         background-color: var(--text-color);
         transition: background-color-trans 0.1s;
         border-radius: 1vmax;
-        padding: 0.2vw;
+        padding: 0.1vw;
+        animation: fadeIn 3s;
+
     }
 
     .icons img:hover {
@@ -497,6 +475,12 @@ footer p {
             width: 7vw;
         }
     }
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+    }
+    
 /* Simple classes */
 .hidden,
 .hidden * {
@@ -505,3 +489,51 @@ footer p {
 .underlined {
     text-decoration: underline;
 }
+
+/* Flex */
+
+
+.fl-dir-row {
+    flex-direction: row;
+}
+
+.fl-dir-colr {
+    flex-direction: column-reverse;
+}
+
+.fl-dir-rowr {
+    flex-direction: row-reverse;
+}
+
+.fl-al-start {
+    align-items: flex-start;
+}
+
+.fl-al-end {
+    align-items: flex-end;
+}
+.fl-al-s-bet {
+    align-content: space-between;
+}
+
+.fl-al-s-aro {
+    align-content: space-around;
+}
+
+.fl-jc-s-bet {
+    justify-content: space-between;
+}
+
+.fl-jc-s-aro {
+    justify-content: space-around;
+}
+
+.fl-jc-s-eve {
+    justify-content: space-evenly;
+}
+
+
+
+
+
+
