--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     --highlight-color: #DB00FF;
     --alt-color: #000AFF;
     --highlightER-color: #dab46e13;
-    --title-fontsize: calc(1.0rem + 0.5vw);
+    --title-fontsize: calc(1.0rem + 1.3vw);
     --nav-fontsize: calc(0.7rem + 1.3vw);
     --p-fontsize: calc(0.4rem + 1.0vw);
     --cycle-fontsize: calc(0.5rem + 1.5vw);
@@ -43,6 +43,7 @@ body {
     overflow-x:hidden;
     margin-left:auto;
     margin-right:auto;
+    
 }
 a {
     text-decoration: none;
@@ -62,8 +63,10 @@ a {
     width: 100%;
     height: 100%;
     z-index: -1;
+    
     opacity: 0;
     transition: opacity 1s ease-in;
+    
     background-size: cover;
     background-image: rgba(0, 0, 0, 0);
     overflow: auto;
@@ -125,19 +128,33 @@ a.underlined:hover, a:hover span.underlined {
     }
 }
 
+
+
+.first{
+    height: 100vh;
+    box-sizing: border-box;
+    
+    
+}
+/*
 .header {
     
     margin-top: 15.5%;
 
 }
+*/
 
-
+.second{
+    
+    height: 100vh;
+    box-sizing: border-box;
+}
 
 .title {
-    margin-top: 2.5vh;
+    top: 35%;
     font-size: var(--title-fontsize);
     line-height: calc(2rem + var(--title-fontsize));
-    font-variation-settings: "wght" 600;
+    font-variation-settings: "wght" 400;
     white-space: nowrap;
     display: inline-block;
     color: var(--highlight-color);
@@ -153,10 +170,12 @@ a.underlined:hover, a:hover span.underlined {
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     font-weight: 400;
-    margin-left: 300px;
+    margin-left: 280px;
     position:absolute;
     animation: fadeIn 3s;
-    margin-left: 14.9%;
+
+    
+    
     
 }
 .title h1 {
@@ -191,10 +210,11 @@ a.underlined:hover, a:hover span.underlined {
     height: auto; 
     width: 35%; 
     position: relative;
-    top: -100px;
+    top: 200px;
     left: 55%;
     transform: translate(-30%, -30%);   
     animation: fadeIn 3s;
+    
 
     
 }
@@ -203,6 +223,7 @@ a.underlined:hover, a:hover span.underlined {
     max-width: 50%;
     max-height: 50%;
     float: right;
+    
 }
 
 .picture::before,
@@ -237,7 +258,8 @@ a.underlined:hover, a:hover span.underlined {
 
 
 .intro {
-    margin-top: 5%;
+    /*margin-top: 5%;*/
+    top: 42%;
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
@@ -247,6 +269,8 @@ a.underlined:hover, a:hover span.underlined {
     margin-right: 43%;
     position: absolute;
     animation: fadeIn 3s;
+    display: inline-block;
+    
     
  }
 
@@ -344,13 +368,16 @@ font-size: calc(0.85 * var(--p-fontsize));
         transition: margin 0.05s ease-out;
     }
 }
+
 .vl{
     border-left: 1px solid white;
     height: 400px;
     position: absolute;
     left: 50%;
-    top: 111%;
+    top: 125%;
 }
+
+
 .scroll{
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
@@ -358,26 +385,27 @@ font-size: calc(0.85 * var(--p-fontsize));
     white-space: nowrap;
     display: inline-block;
     background-color: var(--background-color-trans);
-    line-height: 48px;
-    font-family: 'Outfit';
+    line-height: 50px;
     margin-top: 50%;
-    
     flex-basis: 60%;
     /*margin-left: 50px;*/
     margin-left: 15.7%;
     margin-right: 50%;
     position: absolute;
-    top: 47%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding-bottom: 500px;
     margin-bottom: 50%;
-    animation: fadeIn 3s;
+    /*animation: fadeIn 3s;*/
+    opacity: 0;
+    transition: opacity 1s ease-in;
     
+    
+}
 
-    
-    
-    
+.scroll.visible{
+    opacity: 1;
 }
 
 .repolist{
@@ -388,13 +416,12 @@ font-size: calc(0.85 * var(--p-fontsize));
     display: inline-block;
     background-color: var(--background-color-trans);
     line-height: 48px;
-    font-family: 'Outfit';
     margin-top: 60%;
     flex-basis: 60%;
     margin-left: 15.7%;
     margin-right: 50%;
     position: absolute;
-    top: 30%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding-bottom: 200px;
@@ -420,6 +447,8 @@ font-size: calc(0.85 * var(--p-fontsize));
     
 
 }
+
+
 div.footer {
     position: fixed;
     bottom: 0;
@@ -454,6 +483,7 @@ footer p {
     .icons {
         justify-content: center;
         gap: 2vw;
+        text-align: center;
     }
 
     .icons img {
@@ -463,6 +493,9 @@ footer p {
         border-radius: 1vmax;
         padding: 0.1vw;
         animation: fadeIn 3s;
+        
+        
+        
 
     }
 
@@ -481,8 +514,9 @@ footer p {
     100% { opacity: 1; }
     }
 
-    
+
 /* CSS for fade-in effect */
+
 .fade-in {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
@@ -502,6 +536,9 @@ footer p {
 }
 
 /* Flex */
+.fl-dir-col {
+    flex-direction: column;
+}
 
 
 .fl-dir-row {
