Modified lines and border

--- a/style.css
+++ b/style.css
@@ -150,6 +150,20 @@ a.underlined:hover, a:hover span.underlined {
     box-sizing: border-box;
 }
 
+.vi::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 400px;
+    top: 29%;
+    left: 10%;
+    
+    
+    width: 4px; /* twice the border width for visibility */
+    background: linear-gradient(to top, #000AFF, #DB00FF); /* Replace with your desired colors */
+}
+
 .title {
     top: 35%;
     font-size: var(--title-fontsize);
@@ -170,7 +184,7 @@ a.underlined:hover, a:hover span.underlined {
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     font-weight: 400;
-    margin-left: 280px;
+    margin-left: 240px;
     position:absolute;
     animation: fadeIn 3s;
 
@@ -232,40 +246,48 @@ a.underlined:hover, a:hover span.underlined {
     position: absolute;
     width: 80px;
     height: 80px;
-    z-index: 1;
+    z-index: -1;
 }
 
 
 .picture::before {
     top: -40px;
     left: 200px;
-    border-top: 10px solid #000AFF;
-    border-left: 10px solid #DB00FF;
-
+    border-width: 10px;
+    border-style: solid;
+    height: 150px;
+    width: 150px;
+    border-image: linear-gradient(to bottom right, #000AFF, #DB00FF 50%, transparent 25%) 1;
+    
+    
+    
 }
+
+    
 
 
 .picture::after {
     bottom: -550px;
     right: -130px;
-    border-bottom: 10px solid #000AFF;
-    border-right: 10px solid #DB00FF;
+    border-width: 10px;
+    border-style: solid;
+    height: 150px;
+    width: 150px;
+    border-image: linear-gradient(to top left,  #000AFF, #DB00FF 50%, transparent 25%) 1;
 }
-
 
 
 
 
 
 .intro {
-    /*margin-top: 5%;*/
     top: 42%;
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
     padding: 0 2vw 0 0;
     font-family: 'Outfit';
-    margin-left: 15%;
+    margin-left: 13%;
     margin-right: 43%;
     position: absolute;
     animation: fadeIn 3s;
@@ -307,7 +329,7 @@ a.underlined:hover, a:hover span.underlined {
     transition: transform 0.15s ease-in-out;
     display: inline-block;
     border-radius: 0.3vmax;
-    background-image: linear-gradient(to right, #000AFF, #DB00FF);
+    background-image: linear-gradient(to right,#000AFF, #DB00FF);
     background-size: 100%;
     background-repeat: repeat;
     -webkit-background-clip: text;
@@ -369,14 +391,17 @@ font-size: calc(0.85 * var(--p-fontsize));
     }
 }
 
-.vl{
-    border-left: 1px solid white;
-    height: 400px;
+.vl::before {
+    content: "";
     position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 400px;
     left: 50%;
     top: 125%;
+    width: 4px; /* twice the border width for visibility */
+    background: linear-gradient(to top, #000AFF, #DB00FF); /* Replace with your desired colors */
 }
-
 
 .scroll{
     font-size: var(--p-fontsize);
@@ -393,7 +418,7 @@ font-size: calc(0.85 * var(--p-fontsize));
     margin-right: 50%;
     position: absolute;
     top: 60%;
-    left: 50%;
+    left: 51.5%;
     transform: translate(-50%, -50%);
     padding-bottom: 500px;
     margin-bottom: 50%;
@@ -414,7 +439,6 @@ font-size: calc(0.85 * var(--p-fontsize));
     background-color: var(--background-color-trans);
     white-space: nowrap;
     display: inline-block;
-    background-color: var(--background-color-trans);
     line-height: 48px;
     margin-top: 60%;
     flex-basis: 60%;
@@ -422,15 +446,12 @@ font-size: calc(0.85 * var(--p-fontsize));
     margin-right: 50%;
     position: absolute;
     top: 45%;
-    left: 50%;
+    left: 52.8%;
     transform: translate(-50%, -50%);
     padding-bottom: 200px;
     text-align: left;
     padding-right: 100px;
     animation: fadeIn 3s;
-    
-    
-
         
 }
 
